2013-04-09 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/extensions.php: removed the link to delete or disable the
	update manager because this extension runs inner inner the guts of
	Pandora and when disabled or deleted causes more problems.
	
	Fixes: #3609993

2013-04-09 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/index.php, mobile/operation/groups.php,
	mobile/operation/agents.php, mobile/operation/alerts.php,
	mobile/operation/agent.php, mobile/operation/events.php,
	mobile/operation/modules.php, mobile/include/style/main.css: 
	
	* include/functions_alerts.php include/functions_groups.php: some
	changes for the mobile.
	
	* operation/agentes/ver_agente.php: cleaned source code style.

2013-04-08 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/modules.php, mobile/include/style/main.css: some
	fixes and improves for the list of modules.

2013-04-07  Junichi Satoh  <junichi@rworks.jp>

	* pandora_console_install, install.php: Added support for NetBSD.

	Contributed by Hiroki SHIMIZU. Thanks!

2013-04-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/agents.php, mobile/operation/tactical.php,
	mobile/operation/home.php, mobile/include/style/main.css,
	include/functions_html.php, include/functions_reporting.php: some
	fixes and improves in the mobile console.

2013-04-05  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_events.php: Display the event text properly.
	  Fixes bug #3609638.

2013-04-05  Mario Pulido <mario.pulido@artica.es>

	* godmode/events/event_edit_filter.php: Added help tip in event editor.

2013-04-05 Miguel de Dios <miguel.dedios@artica.es>
	
	* mobile/operation/agents.php, mobile/operation/tactical.php,
	mobile/operation/home.php, mobile/include/style/main.css,
	include/functions_html.php, include/functions_reporting.php: some
	fixes and improves in the mobile console.

2013-04-05  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_recontask.php: Updated help.
